--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 {% include header.html %}
 
-<div id="wrap" class="container">
+<div class="container">
 {{ content }}
-</div> <!-- end wrap -->
+</div>
 
 {% include footer.html %}
